# statementskeleton

./: README.md  file.py  pyproject.toml
src/: __init__.py
src/statement_skeleton/: Account.py  Divider.py  Header.py  Skeleton.py  Title.py  __init__.py
src/statement_skeleton/elements/: Account.py  Divider.py  Element.py  Header.py  Spacer.py  Subtotal.py  Title.py  Total.py  __init__.py
src/statement_skeleton/skeletons/: Skeleton.py  __init__.py
src/statementskeleton/elements/: Divider.py  Element.py  Header.py  Subtotal.py
src/statementskeleton/skeletons/: Skeleton.py
tests/: test_Skeleton.py
